--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>springData</artifactId>
+    <artifactId>spring-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springData</name>
-    <description>springData</description>
+    <name>spring-web</name>
+    <description>First Spring Web Project</description>
     <properties>
         <java.version>17</java.version>
     </properties>
